[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tp-led-matrix"

[profile.release]
debug = true      # symbols are nice and they don't increase the size on the target
lto = true        # better optimizations
codegen-units = 1 # better optimizations

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["stm32l475vg", "time-driver-any"] }
embassy-sync = "0.5.0"
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
embedded-hal = "1.0.0"
futures = { version = "0.3.30", default-features = false }
heapless = "0.8.0"
micromath = "2.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
